added swagger info to categories router
